--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,6 @@ elseif (CMAKE_SYSTEM MATCHES Linux)
     set(GL_LIBS GL GLU glfw3 assimp)
 endif()
 
-find_package(Arrow REQUIRED)
-find_package(Parquet REQUIRED)
-
 set(SOURCES main.cpp
         # opengl
         src/opengl/app.cpp
@@ -55,7 +52,7 @@ set(SOURCES main.cpp
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE ${GL_LIBS} Arrow::arrow_shared Parquet::parquet_shared)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${GL_LIBS})
 
 add_custom_target(copy_assets
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data
