--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES main.cpp
         src/opengl/terrain.h
         src/opengl/terrain.cpp
         src/opengl/util.h
+        src/opengl/fonts.h
         
         src/paper_loader.h
         src/paper_loader.cpp
