--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCES main.cpp
         
         src/paper_loader.h
         src/paper_loader.cpp
+        src/clusters.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
