Load cluster models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ set(SOURCES main.cpp
         
         src/paper_loader.h
         src/paper_loader.cpp
-        # src/clusters.h
-        # src/clusters.cpp
+        src/clusters.h
+        src/clusters.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
